Added accelerometer framework and display test

--- a/app/src/main/res/layout/activity_measuring_tape.xml
+++ b/app/src/main/res/layout/activity_measuring_tape.xml
@@ -7,6 +7,37 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.placeholder.tapemeasure.MeasuringTape">
+    tools:context="com.placeholder.tapemeasure.MeasuringTape"
+    android:background="#ffffff">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="X"
+        android:id="@+id/xText"
+        android:textColor="@android:color/black"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/zText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Y"
+        android:id="@+id/yText"
+        android:layout_below="@+id/xText"
+        android:layout_centerHorizontal="true"
+        android:textColor="#000000" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Z"
+        android:id="@+id/zText"
+        android:textColor="#000000"
+        android:layout_below="@+id/yText"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
