TapeMeasure - Added beginner velocity calculations and start/stop toggle buttons

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colour_blue_PeterRiver">#3498db</color>
+    <color name="colour_blue_PeterRiver">#6c3498db</color>
 </resources>
