--- a/app/src/main/res/layout/activity_measuring_tape.xml
+++ b/app/src/main/res/layout/activity_measuring_tape.xml
@@ -17,8 +17,8 @@
         android:text="X"
         android:id="@+id/xText"
         android:textColor="@android:color/black"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/zText" />
+        android:layout_below="@+id/yText"
+        android:layout_alignEnd="@+id/yText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,9 +26,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Y"
         android:id="@+id/yText"
-        android:layout_below="@+id/xText"
-        android:layout_centerHorizontal="true"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:layout_below="@+id/zText"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,7 +37,34 @@
         android:text="Z"
         android:id="@+id/zText"
         android:textColor="#000000"
-        android:layout_below="@+id/yText"
+        android:layout_below="@+id/velocityText"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Velocity"
+        android:id="@+id/velocityText"
+        android:textColor="#000000"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="53dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Off"
+        android:id="@+id/button_velocity_off"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/xText" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="On"
+        android:id="@+id/button_velocity_on"
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@+id/xText" />
 
 </RelativeLayout>
