--- a/app/src/main/res/layout/activity_measuring_tape.xml
+++ b/app/src/main/res/layout/activity_measuring_tape.xml
@@ -17,8 +17,9 @@
         android:text="X"
         android:id="@+id/xText"
         android:textColor="@android:color/black"
-        android:layout_below="@+id/yText"
-        android:layout_alignEnd="@+id/yText" />
+        android:layout_marginTop="72dp"
+        android:layout_below="@+id/velocityText"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,7 +28,7 @@
         android:text="Y"
         android:id="@+id/yText"
         android:textColor="#000000"
-        android:layout_below="@+id/zText"
+        android:layout_below="@+id/xText"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -37,7 +38,7 @@
         android:text="Z"
         android:id="@+id/zText"
         android:textColor="#000000"
-        android:layout_below="@+id/velocityText"
+        android:layout_below="@+id/yText"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -47,24 +48,24 @@
         android:text="Velocity"
         android:id="@+id/velocityText"
         android:textColor="#000000"
+        android:layout_marginTop="81dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Off"
         android:id="@+id/button_velocity_off"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/xText" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="On"
         android:id="@+id/button_velocity_on"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/xText" />
+        android:layout_alignTop="@+id/button_velocity_off"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
