--- a/app/src/main/res/layout/activity_measuring_tape.xml
+++ b/app/src/main/res/layout/activity_measuring_tape.xml
@@ -68,4 +68,21 @@
         android:layout_alignTop="@+id/button_velocity_off"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_calibrate"
+        android:id="@+id/button_calibrate"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/calibrateText"
+        android:layout_above="@+id/button_calibrate"
+        android:layout_alignStart="@+id/button_calibrate"
+        android:textColor="#000000" />
+
 </RelativeLayout>
