--- a/app/src/main/res/layout/activity_measuring_tape.xml
+++ b/app/src/main/res/layout/activity_measuring_tape.xml
@@ -48,9 +48,8 @@
         android:text="Velocity"
         android:id="@+id/velocityText"
         android:textColor="#000000"
-        android:layout_marginTop="81dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/distanceText"
+        android:layout_alignEnd="@+id/distanceText" />
 
     <Button
         android:layout_width="wrap_content"
@@ -84,5 +83,15 @@
         android:layout_above="@+id/button_calibrate"
         android:layout_alignStart="@+id/button_calibrate"
         android:textColor="#000000" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Distance"
+        android:id="@+id/distanceText"
+        android:textColor="#000000"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
